tests/unit/language/errors/duplicate_shape_error.arche
// RUN: %arche -o %t %s > %t.out 2>&1 ; grep -q "Shape already allocated" %t.out
arche Handle1 {
  val :: int,
}


arche Handle2 {
  val :: int,
}


static pool<Handle1>(1, 1) {
  val: 5,
};


static pool<Handle2>(1, 1) {
  val: 10,
};


@allow_pure_proc
proc main() {
}
